:construction: Adicionando novos markdowns no resumo de OpenCV

--- a/OpenCV.ipynb
+++ b/OpenCV.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "<h4 align=\"center\"> <div style=\"margin: 0px\"> <b> <br> Uso da framework OpenCV no Python<br><br></b> </div> </h4>\n",
     "Este notebook tem como objetivo realizar uma inicialização aos principais comandos da biblioteca OpenCV no Python, amplamente utilizada para o tratamento de imagens e integração com outros sistemas da área de Visão Computacional.\n",
     "\n",
@@ -17,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <b>Parte 1: Carregamento de Dados</b>"
+    "##### <b>Parte 1: Carregamento de Dados</b>\n",
+    "\n",
+    "Esta etapa demonstra as formas de carregamento de imagens e vídeos utilizando o OpenCV."
    ]
   },
   {
@@ -67,6 +70,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O método VideoCapture da OpenCV permite o carregamento do vídeo e o método read() retorna um booleano que informa se a leitura foi bem sucedida além dos frames do vídeo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -95,6 +105,13 @@
    "metadata": {},
    "source": [
     "<b>1.4 Captura com a webcam</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Há uma única alteração fundamental com relação ao código anterior: o valor do parâmetro no método VideoCapture."
    ]
   },
   {
