add more things about opencv

--- a/OpenCV.ipynb
+++ b/OpenCV.ipynb
@@ -50,7 +50,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
    "source": [
     "# Carrega a imagem a partir de um arquivo\n",
     "img = cv2.imread('assets/michaelscott.jpg') \n",
@@ -151,6 +159,219 @@
    "source": [
     "---\n",
     "##### <b>Parte 2: Funções Básicas</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converter uma imagem para preto e branco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread('assets/michaelscott.jpg')\n",
+    "\n",
+    "# cvtColor converte a imagem em diferentes espaços de cor. O padrão da OpenCV é usar canais BGR e não RGB.\n",
+    "imgGray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "cv2.imshow(\"Preto e Branco\", imgGray)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicar filtro <i>blur</i> na imagem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread('assets/michaelscott.jpg')\n",
+    "\n",
+    "imgBlur = cv2.GaussianBlur(img, (7,7),0)\n",
+    "\n",
+    "cv2.imshow(\"Blur\", imgBlur)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detecção de borda\n",
+    "\n",
+    "\"Detecção de borda é uma técnica de processamento de imagem e visão computacional para determinar pontos de uma imagem digital em que a intensidade luminosa muda repentinamente\". <i>Wikipedia</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread('assets/michaelscott.jpg')\n",
+    "\n",
+    "# segundo e terceiro parâmetros são o threshold\n",
+    "imgCanny = cv2.Canny(img,100,100)\n",
+    "\n",
+    "cv2.imshow(\"Canny\", imgCanny)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pode-se usar os métodos Dialation e Erode para, respectivamente, reforçar ou suavizar as bordas. \n",
+    "Primeiro cria-se um kernel, isto é uma matriz que será utilizada como filtro nestas funções."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "kernel = np.ones((5,5), np.uint8)\n",
+    "\n",
+    "img = cv2.imread('assets/michaelscott.jpg')\n",
+    "\n",
+    "imgCanny = cv2.Canny(img,100,100)\n",
+    "\n",
+    "imgDialation = cv2.dilate(imgCanny, kernel, iterations=1)\n",
+    "\n",
+    "cv2.imshow(\"Dialation\", imgDialation)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Filtro\n",
+    "kernel = np.ones((5,5), np.uint8)\n",
+    "\n",
+    "# Imagem\n",
+    "img = cv2.imread('assets/michaelscott.jpg')\n",
+    "\n",
+    "# Detecção de borda Canny\n",
+    "imgCanny = cv2.Canny(img,100,100)\n",
+    "\n",
+    "imgEroded= cv2.erode(imgCanny, kernel, iterations=1)\n",
+    "\n",
+    "cv2.imshow(\"Erode\", imgEroded)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "##### <b>Parte 3: Redimensionamento e Corte da Imagem</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho da imagem original: (490, 760, 3)\n",
+      "Tamanho da imagem redimensionada: (200, 200, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Aquisição da imagem\n",
+    "img = cv2.imread(\"assets/michaelscott.jpg\")\n",
+    "\n",
+    "# Tamanho da imagem original\n",
+    "size = img.shape\n",
+    "\n",
+    "# Método para redimensionamento\n",
+    "imgResize = cv2.resize(img,(200,200))\n",
+    "\n",
+    "print('Tamanho da imagem original: {}'.format(size))\n",
+    "\n",
+    "print('Tamanho da imagem redimensionada: {}'.format(imgResize.shape))\n",
+    "\n",
+    "cv2.imshow(\"Redimensionada\", imgResize)\n",
+    "\n",
+    "cv2.waitKey(0)"
    ]
   },
   {
