add new methodes of OpenCV

--- a/OpenCV.ipynb
+++ b/OpenCV.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +370,90 @@
     "print('Tamanho da imagem redimensionada: {}'.format(imgResize.shape))\n",
     "\n",
     "cv2.imshow(\"Redimensionada\", imgResize)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para recortar, basta fatiar o vetor da imagem de entrada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aquisição da imagem\n",
+    "img = cv2.imread(\"assets/michaelscott.jpg\")\n",
+    "\n",
+    "# Método para recorte da imagem [height, width]\n",
+    "imgCropped = img[0:290,200:560]\n",
+    "\n",
+    "cv2.imshow('Cortada',imgCropped)\n",
+    "\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "##### <b>Parte 4: Transformação de Perspectiva (Warp Perspective)</b> \n",
+    "\n",
+    "Ao realizarmos transformação de perspectiva, podemos mudar a perspectiva de uma determinada imagem ou vídeo para obter as informações necessárias."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Aquisição da imagem e redimensionamento (não obrigatório)\n",
+    "img = cv2.imread('assets/livrosobreamesa.jpeg')\n",
+    "img = cv2.resize(img,(400,400))\n",
+    "\n",
+    "# Largura e altura da imagem, respectivamente\n",
+    "width,height = 400,400\n",
+    "\n",
+    "# Pontos que descrevem as bordas para perspectiva\n",
+    "points = np.float32([[23,200],[154,117],[288,343],[372,209]])\n",
+    "\n",
+    "# Pontos que definem os cantos da nova imagem\n",
+    "pointsNewImg = np.float32([[0,0],[width,0],[0,height],[width,height]])\n",
+    "\n",
+    "# Matriz de transformação\n",
+    "matrix = cv2.getPerspectiveTransform(points,pointsNewImg)\n",
+    "\n",
+    "# Aplicação do método warpPerspective\n",
+    "imgOutput = cv2.warpPerspective(img,matrix,(width,height))\n",
+    "\n",
+    "cv2.imshow('Livro',img)\n",
+    "cv2.imshow('Capa do Livro',imgOutput)\n",
     "\n",
     "cv2.waitKey(0)"
    ]
